# PrismFlow

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO-architecture-migration.md  TODO-interface-refactor.md  TODO.md
src/: main.rs
src/application/: agent_preflight.rs  auth_manager.rs  ci_workflow.rs  context.rs  mod.rs  repo_manager.rs  review_workflow.rs  usecases.rs
src/domain/: entities.rs  errors.rs  mod.rs  ports.rs
src/infrastructure/: filesystem_adapter.rs  git_adapter.rs  github_adapter.rs  github_factory.rs  local_config_adapter.rs  mod.rs  process_manager.rs  shell_adapter.rs  token_providers.rs
src/interface/: cli.rs  cli_handlers.rs  mod.rs  web.rs
