[package]
name = "prismflow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process", "io-util"] }
tokio-util = "0.7"
octocrab = "0.43"
dirs = "6"
chrono = { version = "0.4", features = ["serde", "clock"] }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
futures = "0.3"
axum = "0.7"
